--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy
-sklearn=1.1.3
+scikit-learn==1.1.3
 matplotlib
 pandas
 fastapi
@@ -7,4 +7,4 @@ uvicorn
 gunicorn
 openpyxl
 xgboost
-joblib=1.2.0
+joblib==1.2.0
