--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-scikit-learn==1.1.3
-matplotlib
-pandas
 fastapi
 uvicorn
 gunicorn
-openpyxl
-xgboost
 joblib==1.2.0
+scikit-learn==1.1.3
+xgboost==1.7.6
+pandas
+numpy
+matplotlib
+openpyxl
