--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ fastapi
 uvicorn
 gunicorn
 joblib==1.2.0
-scikit-learn
+numpy==1.23.5
+scikit-learn==1.1.3
 xgboost==1.7.6
 pandas
-numpy
 matplotlib
 openpyxl
